# minimal_graspqp

./: .gitignore  .readthedocs.yaml  README.md  SOFTWARE_REQUIREMENTS.md  pyproject.toml
.github/workflows/: docs.yml
assets/mujoco_shadow_hand_in_hand_rolling/: right_hand.xml
assets/objects/: collision.usd  core-bottle-1a7ba1f4c892e2da30711cdbdbc73924.usd  test_tube.stl
docs/: concepts.rst  conf.py  index.rst  overview.rst
docs/api/: assets.rst  energy.rst  hands.rst  init.rst  metrics.rst  objects.rst  optim.rst  solvers.rst  (+2 more)
minimal_graspqp/: __init__.py  assets.py  rotation.py  state.py
minimal_graspqp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: edit_shadow_hand_contacts.py  edit_shadow_hand_contacts_viser.py  grasp_ui.py  mujoco_grasp_smoke.py  mujoco_shadow_hand_dynamic_grasp.py  mujoco_vendored_hand_eval.py  optimize_primitive.py  test_tube_notes.md  visualize_initialization.py  visualize_initialization_meshcat.py  visualize_mjcf_optimization_result.py  visualize_optimization_batch.py  visualize_optimization_result.py  visualize_optimization_result_meshcat.py  visualize_shadow_hand_with_mesh.py  visualize_shadow_hand_with_primitive.py  visualize_shadow_hand_with_primitive_meshcat.py
tests/: test_energy.py  test_force_closure.py  test_initialization.py  test_initialization_visualization.py  test_mesh_object.py  test_mesh_optimization.py  test_meshcat_visualization.py  test_optimization_visualization.py  test_optimizer.py  test_primitives.py  test_qp_solver.py  test_shadow_hand.py  test_visualization.py  test_wrench.py
(+26 files in other folders)
