[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-graspqp"
version = "0.1.0"
description = "Minimal GraspQP reproduction focused on Shadow Hand and primitive objects."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "torch>=2.5,<2.7",
  "numpy>=1.26,<2.0",
  "scipy>=1.15,<1.16",
  "trimesh>=4.8,<5.0",
  "transforms3d>=0.4.2,<0.5",
  "lxml>=5.0,<6.0",
  "pyyaml>=6.0,<7.0",
  "six>=1.16,<2.0",
  "pytorch-kinematics @ git+https://github.com/renezurbruegg/pytorch_kinematics",
  "qpth>=0.0.18,<0.0.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.11,<0.12",
]
viz = [
  "matplotlib>=3.10,<3.11",
  "plotly>=6.0,<7.0",
]
meshcat = [
  "meshcat>=0.3,<0.4",
]
docs = [
  "sphinx>=8.0,<9.0",
  "furo>=2024.8.6",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["minimal_graspqp*"]
